--- a/products.html
+++ b/products.html
@@ -26,6 +26,12 @@
             <p>Description of the Ancient Roman Coin.</p>
             <p>Price: $100</p>
         </div>
+        <div class="product">
+            <h3>Old US Dollar Bill</h3>
+            <img src="us-dollar.jpg" alt="Old US Dollar Bill">
+            <p>Description of the Old US Dollar Bill.</p>
+            <p>Price: $50</p>
+        </div>
         <!-- Repeat the product block for each item -->
     </main>
     <footer>
