"actualizado el diseño del sitio web a ser más moderno"

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Old Currency Shop</h1>
+        <h1>Old Currency Shop</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,11 +19,14 @@
         </nav>
     </header>
     <main>
-        <h2>Discover Rare and Historical Currency</h2>
-        <p>Your one-stop shop for old and rare currencies from around the world.</p>
+        <section class="hero">
+            <h2>Discover Rare and Historical Currency</h2>
+            <p>Your one-stop shop for old and rare currencies from around the world.</p>
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Old Currency Shop</p>
     </footer>
 </body>
 </html>
+
