--- a/products.html
+++ b/products.html
@@ -19,23 +19,24 @@
         </nav>
     </header>
     <main>
-        <h2>Old Currency Collection</h2>
-        <div class="product">
-            <h3>Ancient Roman Coin</h3>
-            <img src="roman-coin.jpg" alt="Ancient Roman Coin">
-            <p>Description of the Ancient Roman Coin.</p>
-            <p>Price: $100</p>
-        </div>
-        <div class="product">
-            <h3>Old US Dollar Bill</h3>
-            <img src="us-dollar.jpg" alt="Old US Dollar Bill">
-            <p>Description of the Old US Dollar Bill.</p>
-            <p>Price: $50</p>
-        </div>
-        <!-- Repeat the product block for each item -->
+        <section class="products">
+            <div class="product">
+                <h3>Ancient Roman Coin</h3>
+                <img src="roman-coin.jpg" alt="Ancient Roman Coin">
+                <p>Description of the Ancient Roman Coin.</p>
+                <p>Price: $100</p>
+            </div>
+            <div class="product">
+                <h3>Old US Dollar Bill</h3>
+                <img src="us-dollar.jpg" alt="Old US Dollar Bill">
+                <p>Description of the Old US Dollar Bill.</p>
+                <p>Price: $50</p>
+            </div>
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Old Currency Shop</p>
     </footer>
 </body>
 </html>
+
