--- a/about.html
+++ b/about.html
@@ -19,11 +19,14 @@
         </nav>
     </header>
     <main>
-        <h2>Our Story</h2>
-        <p>We are passionate about old and rare currencies. Our collection spans many countries and eras.</p>
+        <section class="content">
+            <h2>Our Story</h2>
+            <p>We are passionate about old and rare currencies. Our collection spans many countries and eras.</p>
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Old Currency Shop</p>
     </footer>
 </body>
 </html>
+
