--- a/contact.html
+++ b/contact.html
@@ -19,12 +19,15 @@
         </nav>
     </header>
     <main>
-        <h2>Get in Touch</h2>
-        <p>Email: <a href="mailto:info@oldcurrencyshop.com">info@oldcurrencyshop.com</a></p>
-        <p>Phone: 123-456-7890</p>
+        <section class="content">
+            <h2>Get in Touch</h2>
+            <p>Email: <a href="mailto:info@oldcurrencyshop.com">info@oldcurrencyshop.com</a></p>
+            <p>Phone: 123-456-7890</p>
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Old Currency Shop</p>
     </footer>
 </body>
 </html>
+
